# tool-pool

./: .gitignore  Cargo.toml  Dockerfile.test  Makefile  README.md  cargo-publish.sh  clippy.sh  docker-compose.test.yml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
benches/: README.md
crates/mcpkit-rs/: Cargo.toml  README.md
crates/mcpkit-rs-cli/: Cargo.toml
crates/mcpkit-rs-cli/src/: main.rs
crates/mcpkit-rs-cli/src/commands/: bundle.rs  mod.rs  server.rs  validate.rs
crates/mcpkit-rs-config/: Cargo.toml
crates/mcpkit-rs-config/src/: defaults.rs  error.rs  lib.rs  loader.rs  tests.rs  validation.rs
crates/mcpkit-rs-macros/: Cargo.toml
crates/mcpkit-rs-macros/src/: prompt.rs  task_handler.rs  tool.rs
crates/mcpkit-rs-policy/: Cargo.toml
crates/mcpkit-rs-policy/benches/: README.md  exhaustive.rs  practical.rs  simple.rs
crates/mcpkit-rs-policy/src/: cache.rs  compiled.rs  core.rs  engine.rs  error.rs  lib.rs  permissions.rs  tests.rs
crates/mcpkit-rs-policy/src/extensions/: mcp.rs  mod.rs
crates/mcpkit-rs-policy/src/runtime/: mod.rs  wasmedge.rs  wasmtime.rs
crates/mcpkit-rs-tests/: Cargo.toml
crates/mcpkit-rs-tests/scripts/: test_distribution.sh
crates/mcpkit-rs-tests/tests/distribution/: cache.rs  main.rs  push_pull.rs  registry.rs
crates/mcpkit-rs-tests/tests/integration/: config_loading.rs  main.rs  server_client.rs  wasm_policy.rs
crates/mcpkit-rs/examples/: test_config_integration.rs
crates/mcpkit-rs/examples/calculator-wasm/: Cargo.toml
crates/mcpkit-rs/src/: config.rs  lib.rs
crates/mcpkit-rs/src/bundle/: cache.rs  mod.rs  oci.rs
crates/mcpkit-rs/src/handler/: server.rs
crates/mcpkit-rs/src/handler/server/: common.rs  policy.rs
crates/mcpkit-rs/src/handler/server/router/: tool.rs
crates/mcpkit-rs/src/handler/server/router/tool/: tool_traits.rs
crates/mcpkit-rs/src/model/: capabilities.rs
crates/mcpkit-rs/src/transport/streamable_http_server/: tower.rs
crates/mcpkit-rs/src/wasm/: executor.rs  fs.rs  integration.rs  manifest.rs  metering.rs  mod.rs  runtime.rs
crates/mcpkit-rs/tests/: test_client_credentials.rs  test_complex_schema.rs  test_custom_headers.rs  test_handler_wrappers.rs  test_json_schema_detection.rs  test_metering_integration.rs  test_policy_enforcement.rs  test_policy_simple.rs  test_progress_subscriber.rs  test_prompt_macro_annotations.rs  test_prompt_routers.rs  test_sse_concurrent_streams.rs  test_streamable_http_json_response.rs  test_streamable_http_stale_session.rs  test_structured_output.rs  test_tool_routers.rs  test_wasm_fs_access.rs
crates/mcpkit-rs/tests/common/: handlers.rs
crates/mcpkit-rs/tests/fixtures/: hello.wat  infinite_loop.wat  noop.wat  simple_loop.wat
crates/mcpkit-rs/tests/test_with_js/: package-lock.json
crates/rmcp/: Cargo.toml
crates/rmcp-macros/: Cargo.toml
crates/rmcp-macros/src/: task_handler.rs  tool.rs  tool_handler.rs  tool_router.rs
crates/rmcp/src/: error.rs  lib.rs  model.rs  service.rs  task_manager.rs  transport.rs
crates/rmcp/tests/: test_client_initialization.rs  test_close_connection.rs  test_completion.rs  test_complex_schema.rs  test_custom_request.rs  test_elicitation.rs  test_handler_wrappers.rs  test_json_schema_detection.rs  test_logging.rs  test_message_protocol.rs  test_message_schema.rs  test_notification.rs  test_progress_subscriber.rs  test_prompt_handler.rs  test_prompt_macro_annotations.rs  test_prompt_macros.rs  test_prompt_routers.rs  test_resource_link.rs  test_resource_link_integration.rs  test_sampling.rs  test_streamable_http_priming.rs  test_structured_output.rs  test_tool_builder_methods.rs  test_tool_macro_annotations.rs  test_tool_macros.rs  test_tool_routers.rs  test_with_js.rs  test_with_python.rs  wasm_integration_test.rs  wasm_tools_test.rs
crates/rmcp/tests/test_with_python/: pyproject.toml
docs/: CONFIGURATION.md  DISTRIBUTION.md  FILESYSTEM_PERMISSIONS.md  MANIFEST.md  METERING.md  POLICY.md  TESTING.md  TOOL_POOL_TECH_DESIGN_v1.md  WASSETTE.md  WASSETTE_DISTRIBUTION.md
examples/: README.md
examples/clients/: Cargo.toml
examples/clients/src/: collection.rs  everything_stdio.rs  git_stdio.rs  progress_client.rs  sampling_stdio.rs  streamable_http.rs
examples/clients/src/auth/: client_credentials.rs  oauth_client.rs
examples/rig-integration/: Cargo.toml
examples/rig-integration/src/: chat.rs  mcp_adaptor.rs
examples/rig-integration/src/config/: mcp.rs
examples/servers/: Cargo.toml
examples/servers/src/: calculator_stdio.rs  cimd_auth_streamhttp.rs  completion_stdio.rs  complex_auth_streamhttp.rs  counter_stdio.rs  counter_streamhttp.rs  elicitation_enum_inference.rs  elicitation_stdio.rs  progress_demo.rs  prompt_stdio.rs  sampling_stdio.rs  simple_auth_streamhttp.rs
examples/servers/src/common/: counter.rs  progress_demo.rs
examples/simple-chat-client/: Cargo.toml
examples/simple-chat-client/src/: chat.rs  client.rs  config.rs  tool.rs
examples/transport/: Cargo.toml
examples/transport/src/: http_upgrade.rs  named-pipe.rs  unix_socket.rs  websocket.rs
examples/wasi/: Cargo.toml  README.md
examples/wasi-multi/: Cargo.toml  README.md
examples/wasi-multi/src/: lib.rs
examples/wasm-calculator/: Cargo.toml  README.md  build.sh
examples/wasm-calculator/src/: calculator.rs  lib.rs
examples/wasm-fullstack/: Cargo.toml  README.md  build-v2.sh  build.sh  docker-compose.yml  init.sql  manifest.toml
examples/wasm-fullstack-v1/: Cargo.toml  README.md  build.sh
examples/wasm-fullstack-v1/src/: lib.rs  main.rs
examples/wasm-fullstack-v2/: Cargo.toml  README.md  build-mcp.sh  build.sh  docker-compose.yml
examples/wasm-fullstack-v2/src/: lib.rs  main.rs
examples/wasm-fullstack/.cargo/: config.toml
examples/wasm-fullstack/src/: lib.rs  main.rs  server.rs
examples/wasm/wasmedge/fullstack/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  config.http.yaml  config.stdio.yaml  config.yaml  docker-compose.yml  test_docker.js  test_harness.sh
examples/wasm/wasmedge/fullstack/src/: lib.rs  main.rs  server.rs
scripts/: setup-test-env.sh
(+58 files in other folders)
