[package]
name = "mcpkit-rs-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Command-line interface for mcpkit-rs"

[[bin]]
name = "mcpk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"

clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
dirs = "5.0"
indicatif = "0.17"
mcpkit-rs-config = { path = "../mcpkit-rs-config" }
mcpkit_rs = { workspace = true, features = ["distribution", "config", "wasm-tools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
