[package]
name = "mcpkit-rs-config"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0"

dirs = "5.0"

mcpkit-rs-policy = { path = "../mcpkit-rs-policy" }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tracing = "0.1"
url = "2.5"

[dev-dependencies]
insta = "1.40"
tempfile = "3.0"
