[package]
name = "mcpkit-rs-policy"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = []
wasmtime-backend = ["wasmtime"]
wasmedge-backend = ["wasmedge-sdk"]
full = ["wasmtime-backend", "wasmedge-backend"]

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
async-trait = "0.1"
bloomfilter = "1.0"
globset = "0.4"
lru = "0.16"

rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
thread_local = "1.1"
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1"
wasmedge-sdk = { version = "0.14", optional = true }

wasmtime = { version = "41.0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "practical"
harness = false

[[bench]]
name = "exhaustive"
harness = false
