[package]
name = "mcpkit_rs"
license = { workspace = true }
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
description = "Rust SDK for Model Context Protocol"
documentation = "https://docs.rs/mcpkit_rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["base64", "macros", "server", "config"]
client = ["dep:tokio-stream"]
server = ["transport-async-rw", "dep:schemars", "dep:pastey"]
macros = ["dep:mcpkit_rs_macros", "dep:pastey"]
elicitation = []
wasm-tools = ["dep:wasmtime", "dep:wasmtime-wasi"]
config = ["dep:mcpkit-rs-config", "dep:mcpkit-rs-policy"]
policy = ["dep:mcpkit-rs-policy"]

# reqwest http client
__reqwest = ["dep:reqwest"]

reqwest = ["__reqwest", "reqwest?/rustls-tls"]

reqwest-tls-no-provider = ["__reqwest", "reqwest?/rustls-tls-no-provider"]

server-side-http = [
  "uuid",
  "dep:rand",
  "dep:tokio-stream",
  "dep:http",
  "dep:http-body",
  "dep:http-body-util",
  "dep:bytes",
  "dep:sse-stream",
  "tower",
]

transport-worker = ["dep:tokio-stream"]

# SSE stream parsing utilities (used by streamable HTTP client for SSE-formatted responses)
client-side-sse = ["dep:sse-stream", "dep:http"]

# Streamable HTTP client
transport-streamable-http-client = ["client-side-sse", "transport-worker"]
transport-streamable-http-client-reqwest = ["transport-streamable-http-client", "__reqwest"]

transport-async-rw = ["tokio/io-util", "tokio-util/codec"]
transport-io = ["transport-async-rw", "tokio/io-std"]
transport-child-process = ["transport-async-rw", "tokio/process", "dep:process-wrap"]
transport-streamable-http-server = [
    "transport-streamable-http-server-session",
    "server-side-http",
    "transport-worker",
]
transport-streamable-http-server-session = ["transport-async-rw", "dep:tokio-stream"]
# transport-ws = ["transport-io", "dep:tokio-tungstenite"]
tower = ["dep:tower-service"]
auth = ["dep:oauth2", "__reqwest", "dep:url"]
schemars = ["dep:schemars"]

[dependencies]
async-trait = "0.1.89"
# for ws transport
# tokio-tungstenite ={ version = "0.26", optional = true }

# for http-server transport
axum = { version = "0.8", features = [], optional = true }

# for image encoding
base64 = { version = "0.22", optional = true }
bytes = { version = "1", optional = true }
futures = "0.3"

http = { version = "1", optional = true }
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
mcpkit-rs-config = { path = "../mcpkit-rs-config", optional = true }
mcpkit-rs-policy = { path = "../mcpkit-rs-policy", optional = true }
mcpkit_rs_macros = { workspace = true, optional = true }
# oauth2 support
oauth2 = { version = "5.0", optional = true, default-features = false, features = ["reqwest"] }
pastey = { version = "0.2.0", optional = true }
pin-project-lite = "0.2"

# for child process transport
process-wrap = { version = "6.0.1", features = ["tokio1"], optional = true }
rand = { version = "0.9", optional = true }

# for HTTP client
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
], optional = true }

# for auto generate schema
schemars = { version = "1.0", optional = true, features = ["chrono04"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.10"

sse-stream = { version = "0.2", optional = true }
thiserror = "2"
tokio = { version = "=1.36.0", features = ["sync", "macros", "rt", "time"] }
tokio-stream = { version = "=0.1.11", optional = true }
tokio-util = { version = "0.7" }
toml = "0.8"

# For tower compatibility
tower-service = { version = "0.3", optional = true }
tracing = { version = "0.1" }
url = { version = "2.4", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

# wasm dependencies
wasmtime = { version = "24.0", optional = true }
wasmtime-wasi = { version = "24.0", optional = true }

# wasm

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
  "serde",
  "clock",
  "std",
  "oldtime",
] }
[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]

anyhow = "1.0"
async-trait = "0.1"
schemars = { version = "1.1.0", features = ["chrono04"] }
tokio = { version = "=1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "std",
  "fmt",
] }
[[test]]
name = "test_tool_macros"
required-features = ["server", "client"]
path = "tests/test_tool_macros.rs"

[[test]]
name = "test_with_python"
required-features = [
  "reqwest",
  "server",
  "client",
  "transport-child-process",
]
path = "tests/test_with_python.rs"

[[test]]
name = "test_with_js"
required-features = [
    "server",
    "client",
    "transport-child-process",
    "transport-streamable-http-server",
    "transport-streamable-http-client",
    "__reqwest",
]
path = "tests/test_with_js.rs"

[[test]]
name = "test_notification"
required-features = ["server", "client"]
path = "tests/test_notification.rs"

[[test]]
name = "test_logging"
required-features = ["server", "client"]
path = "tests/test_logging.rs"

[[test]]
name = "test_message_protocol"
required-features = ["client"]
path = "tests/test_message_protocol.rs"

[[test]]
name = "test_message_schema"
required-features = ["server", "client", "schemars"]
path = "tests/test_message_schema.rs"

[[test]]
name = "test_progress_subscriber"
required-features = ["server", "client", "macros"]
path = "tests/test_progress_subscriber.rs"

[[test]]
name = "test_elicitation"
required-features = ["elicitation", "client", "server"]
path = "tests/test_elicitation.rs"

[[test]]
name = "test_task"
required-features = ["server", "client", "macros"]
path = "tests/test_task.rs"

[[test]]
name = "test_streamable_http_priming"
required-features = ["server", "client", "transport-streamable-http-server", "reqwest"]
path = "tests/test_streamable_http_priming.rs"

[[test]]
name = "test_custom_request"
required-features = ["server", "client"]
path = "tests/test_custom_request.rs"

[[test]]
name = "test_prompt_macros"
required-features = ["server", "client"]
path = "tests/test_prompt_macros.rs"

[[test]]
name = "test_sampling"
required-features = ["server", "client"]
path = "tests/test_sampling.rs"

[[test]]
name = "test_close_connection"
required-features = ["server", "client"]
path = "tests/test_close_connection.rs"

[[test]]
name = "test_custom_headers"
required-features = [
  "client",
  "server",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server",
]
path = "tests/test_custom_headers.rs"

[[test]]
name = "test_policy_enforcement"
required-features = ["server", "client"]
path = "tests/test_policy_enforcement.rs"

[[test]]
name = "test_policy_simple"
required-features = ["server", "client", "policy"]
path = "tests/test_policy_simple.rs"
