
[package]
name = "rmcp-macros"
license = { workspace = true }
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = { workspace = true }
description = "Rust SDK for Model Context Protocol macros library"
documentation = "https://docs.rs/rmcp-macros"

[lib]
proc-macro = true

[features]

[dependencies]
darling = { version = "0.23" }
proc-macro2 = "1"
quote = "1"
serde_json = "1.0"
syn = { version = "2", features = ["full"] }
[dev-dependencies]
