[package]
name = "simple-chat-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.13.2", features = ["json"] }
rmcp = { workspace = true, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "=1.36.0", features = ["full"] }
toml = "1.0"
