[package]
name = "transport"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }
publish = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
pin-project-lite = "0.2"
rand = { version = "0.10" }
reqwest = { version = "0.13.2" }
rmcp = { workspace = true, features = ["server", "client", "schemars"] }
schemars = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.36.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "net",
    "fs",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tokio-tungstenite = "0.28.0"

[[example]]
name = "tcp"
path = "src/tcp.rs"


[[example]]
name = "http_upgrade"
path = "src/http_upgrade.rs"

[[example]]
name = "unix_socket"
path = "src/unix_socket.rs"

[[example]]
name = "websocket"
path = "src/websocket.rs"

[[example]]
name = "named-pipe"
path = "src/named-pipe.rs"
