[package]
name = "wasm-fullstack"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "wasm-fullstack-stdio"
path = "src/bin/stdio.rs"

[[bin]]
name = "wasm-fullstack-http"
path = "src/bin/http.rs"

[features]
default = []
wasmedge-postgres = ["tokio-postgres", "postgres-types"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
bytes = "1.9"
chrono = "0.4"
glob = "0.3"
postgres-types = { version = "0.2", features = ["derive"], optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rmcp = { path = "../../crates/rmcp", features = ["schemars", "transport-streamable-http-server"] }
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-util", "io-std", "fs", "net", "time", "rt", "macros", "signal"] }
tokio-postgres = { version = "0.7", optional = true }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# WasmEdge patches for real PostgreSQL and HTTP support
# Following the official WasmEdge example approach
[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
tokio-postgres = { git = "https://github.com/second-state/rust-postgres.git" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
