[package]
name = "wasm-fullstack"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "v1"
path = "src/bin/v1.rs"

[[bin]]
name = "v2"
path = "src/bin/v2.rs"

[features]
default = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
glob = "0.3"
postgres-types = { version = "0.2", features = ["derive"] }
rmcp = { path = "../../crates/rmcp", features = ["schemars"] }
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.36.0", features = ["rt", "macros", "io-util", "time", "sync"] }
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wasi = "0.14.2"

[target.'cfg(target_os = "wasi")'.dependencies]
wasmedge_wasi_socket = "0.5"

# Note: WasmEdge patches are in the workspace root Cargo.toml
