[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_with_python"
version = "0.1.0"
description = "Test Python client for RMCP"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastmcp==2.14.3",
  "packaging",
]

[tool.setuptools]
py-modules = ["client", "server"]
